# ccl-bench

./: .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CNAME  README.md  VLLM_QUICKSTART.md  _config.yml  index.html  leaderboard.html  pyproject.toml  requirements.txt  run.py  run_task_b.py  run_tp_scaling.py  sglang_debug_summary.md  supplement_metric.txt  vllm_profiler.py  workload_card_template.yaml
agent/: README.md  run.sh  simple.py
agent/ccl_bench_agent/: agent.py  compute_metric.py  execute.py  generate_config.py  plot_results.py  results_20260428_184951.csv  results_20260428_185620.csv  run_cache.py  tuning_config.yaml  update_history.py  update_policy.py  upload_traces.py  workload_card.yaml
agent/experiments/: agent_prompt.txt  exp_agent_prompt.txt  parallelism_agent.py
agent/megatron_llama8b/: generate_config.py  generate_config_16gpu.py  generate_config_composite_seed.py  generate_config_dsv2lite_composite_seed.py  generate_config_dsv2lite_seed.py  tuning_config.yaml  tuning_config_16gpu.yaml  tuning_config_composite.yaml  tuning_config_dsv2lite.yaml  tuning_config_dsv2lite_composite.yaml  workload_card.yaml  workload_card_16gpu.yaml  workload_card_16gpu_best.yaml  workload_card_16gpu_bs32.yaml  workload_card_dsv2lite.yaml
agent/perlmutter_torchtitan_llama8b/: generate_config.py  run_agent.sh  tuning_config.yaml  workload_card.yaml
agent/tools/: README.md
docs/: proposal.md
experiments/: README.md  analyze_results.py  generate_all_configs.py  generate_task_b_summary.py  generate_workload_card.py
group17-pipeline/: README.md  ana.py  mscclpp_manager_para.py  test_size.py
perlmutter/: README.md  activate.sh  common.sh  run_deepseek_v2_lite_dp_pp.sbatch  run_deepseek_v2_lite_dp_tp.sbatch  run_llama3_8b_pp.sbatch  run_llama3_8b_tp.sbatch  run_qwen3_32b_3d.sbatch  run_qwen3_32b_dp_pp.sbatch  run_qwen3_32b_dp_tp.sbatch  setup_env.sh  submit_all.sh
pipeline/: README.md  inspect_trace.py  mscclpp_manager_mono.py  plot.py  plot_performance.py  plot_timeline.py  plot_trace_metrics.py  run.sh  run.slurm  tppp_run.sh  train_llama_mscclpp.py  train_llama_nccl.py
scripts/: analyze_all_nvlink.sh  analyze_traces.sh  benchmark_multinode.py  benchmark_singlenode.py  correlate_nsys_nvlink.sh  debug_sglang_minimal_perlmutter.sh  get_aggregate_gpu_utilization.sh  get_allreduce_comm_time_s_group_21.sh  get_average_memory_bandwidth.sh  get_avg_comm_bandwidth_GBps_group_21.sh  get_avg_comm_kernel_time_s_group_21.sh  get_avg_step_time.sh  get_bandwidth_utilization_group_6.sh  get_coll_cal_num.sh  get_comm_comp_overlap.sh  get_comm_comp_overlap_group_18.sh  get_comm_kernel_breakdown_tpu.sh  get_comm_overhead_group_18.sh  get_communication_fraction.sh  get_communication_fraction_group_21.sh  get_communication_overlap_ratio.sh  get_compute_bound_fraction.sh  get_compute_utilization_proxy_group_21.sh  get_dominant_kernel_concentration.sh  get_hockney_alpha_s_group_21.sh  get_hockney_beta_s_per_byte_group_21.sh  get_hockney_inverse_beta_Bps_group_21.sh  get_iteration_wall_clock_group_18.sh  get_kernel_compute_time_group_6.sh  get_load_imbalance_ratio.sh  get_mean_sm_coverage.sh  get_memory_bound_fraction.sh  get_memory_transfer_overhead.sh  get_mfu-group_1.sh  get_mfu_group4.sh  get_moe_fraction.sh  get_num_comm_kernels_group_21.sh  get_straggler_metrics-group_5.sh  get_throughput_group_6.sh  get_throughput_tokens_sec_group_18.sh  (+34 more)
simulation/: README.md  gen_chakra_et.py  gen_tpu_xla_chakra_et.py  mock_pipeline.py  mock_trace_gen.py  pipeline.py
tests/: test_trace_analyzer.py
tools/: METRICS_GUIDE.md  README.md  __init__.py  aggregate_reports.py  analyze_workload.py  bandwidth_utilization_group_6_common.py  calc_all_metrics.py  group11_main_wrong_format.py  group12_README_wrong_format.md  group2_main_wrong_format.py  json_sampling.py  main.py  nsys_utils.py  run_allreduce_bw.py  test.py  trace_analyzer.py  trace_metric_utils.py  trace_utils.py  utils-group-21.py
torchtitan/: bench_comm.py  bench_llama_mscclpp.slurm  multinode_trainer.slurm  run_mscclpp.sh  run_nccl.sh  run_train.sh
trace_collection/: README.md  deepseek-v2-lite-vllm.yaml  experiment_metrics.csv  nsys_wrapper_2n.sh  register_deepseek_v2_lite.py  register_deepseek_v2_lite.sh  run.sh  run_all_deepseek.sh  run_trace.sh  run_trace_2n8g.sh  train_2n8g.py  train_local.py  workload.md
trace_collection/common/: common-deepseek.sh  common.sh  env.sh  giri.sh  install.sh  pyproject.toml
trace_collection/deepseek-v2-lite-torchtitan-dp+pp-perlmutter-16/: README.md  pyproject.toml  run.sbatch  run.sh  train_config.toml  workload_card.yaml
trace_collection/llama3.1-8b-torchtitan-pp-perlmutter-16/: README.md  env.sh  install.sh  pyproject.toml  run.sbatch  run.sh  workload_card.yaml
trace_collection/llama3.1-8b-torchtitan-tp-perlmutter-16/: README.md  env.sh  pyproject.toml  run.sh  workload_card.yaml
trace_collection/qwen3-32b-torchtitan-3d-perlmutter-16/: .python-version  README.md  install.sh  pyproject.toml  run.sbatch  run.sh  train_config.toml  workload_card.yaml
trace_collection/qwen3-32b-torchtitan-dp+pp-perlmutter-16/: .python-version  README.md  pyproject.toml  run.sbatch  run.sh  train_config.toml  workload_card.yaml
trace_collection_backlog/: README.md  metrics_output.json
trace_gen/: README.md  after.txt  alloc.sh  before.txt  bench_utils.py  client.sh  inference.py  log  nsys_profile_server.sh  nvlink_diff.py  plot_nvlink_deltas.py  run_batch_experiments.sh  server.sh  setup.sh  tokens.txt  utilization.c  utilization.py  utilization_reader.py
train_configs/: deepseek_v2_lite_dp_pp.toml  deepseek_v2_lite_dp_tp.toml  llama3_8b_pp.toml  llama3_8b_tp.toml  qwen3_32b_3d.toml  qwen3_32b_dp_pp.toml  qwen3_32b_dp_tp.toml
upload_server/: requirements.txt  server.py
website/: SQL_BACKEND.md  benchmark_config.json  benchmark_config_backlog.json  benchmark_data.json  benchmark_data.sqlite  data.js  gen_run_scripts.py  generate_data.py  generate_database.py  index.html  local_server.py  process_upload.py  sql_demo.html  styles.css  upload_server.py
workloads/: README.md
(+1532 files in other folders)
