# DeepSeek-V2-Lite DP+PP Parallelism Workload
# Part of CCL-Bench workspace

[project]
name = "deepseek-v2-lite-torchtitan-dp-pp-perlmutter-16"
version = "0.1.0"
description = "DeepSeek-V2-Lite (16B MoE) training with DP+PP Parallelism on Perlmutter"
readme = "README.md"
requires-python = ">=3.10.12,<3.11"
dependencies = [
    "torch>=2.9.1 ; sys_platform == 'linux'",
    "torchvision ; sys_platform == 'linux'",
    "torchaudio ; sys_platform == 'linux'",
    "torchtitan>=0.2.0 ; sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
managed = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/nightly/cu129"
explicit = true
