# LLaMA-3.1-8B Pure Tensor Parallelism (TP=4) Workload
# Part of CCL-Bench workspace

[project]
name = "llama3-8b-torchtitan-tp-perlmutter-16"
version = "0.1.0"
description = "LLaMA-3.1-8B training with Pure Tensor Parallelism (TP=4) on Perlmutter"
readme = "README.md"
requires-python = ">=3.10.12,<3.11"
dependencies = [
  "torch>=2.9.1 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torchtitan>=0.2.0 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
managed = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
